// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AzureContainerRegistry-Snapshot renders a AzureContainerRegistry and check snapshot 1`] = `
"{
}"
`;

exports[`AzureContainerRegistry-Snapshot renders a AzureContainerRegistry with tags 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_container_registry.testACR_acr_53FDF08B.id}"
    }
  },
  "resource": {
    "azurerm_container_registry": {
      "testACR_acr_53FDF08B": {
        "admin_enabled": false,
        "georeplications": [
          {
            "location": "westus"
          }
        ],
        "location": "eastus",
        "name": "acrtest888",
        "resource_group_name": "rg-test",
        "sku": "Premium",
        "tags": {
          "environment": "test"
        }
      }
    }
  }
}"
`;

exports[`AzureContainerRegistry-Snapshot renders a AzureContainerRegistry without tags 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_container_registry.testACR_acr_53FDF08B.id}"
    }
  },
  "resource": {
    "azurerm_container_registry": {
      "testACR_acr_53FDF08B": {
        "admin_enabled": false,
        "georeplications": [
          {
            "location": "westus"
          }
        ],
        "location": "eastus",
        "name": "acrtest888",
        "resource_group_name": "rg-test",
        "sku": "Premium"
      }
    }
  }
}"
`;
